k/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hanbaiki
  labels:
    app: hanbaiki
spec:
  selector:
    matchLabels:
      app: hanbaiki
  template:
    metadata:
      labels:
        app: hanbaiki
    spec:
      containers:
        - name: hanbaiki
          image: hanbaiki
          ports:
            - name: hanbaiki
              containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hanbaiki-dist
  labels:
    app: hanbaiki-dist
spec:
  selector:
    matchLabels:
      app: hanbaiki-dist
  template:
    metadata:
      labels:
        app: hanbaiki-dist
    spec:
      containers:
        - name: hanbaiki-dist
          image: hanbaiki-dist
          ports:
            - name: hanbaiki-dist
              containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hanbaiki-api
  labels:
    app: hanbaiki-api
spec:
  selector:
    matchLabels:
      app: hanbaiki-api
  template:
    metadata:
      labels:
        app: hanbaiki-api
    spec:
      containers:
        - name: hanbaiki-api
          image: hanbaiki-api
          ports:
            - name: hanbaiki-api
              containerPort: 8000
