k/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hanbaiki
  labels:
    app: hanbaiki
spec:
  ports:
    - name: hanbaiki
      port: 3000
      protocol: TCP
      targetPort: hanbaiki
  selector:
    app: hanbaiki
  type: ClusterIP
